# hdrdiff

./: Pipfile  README.md  enable_exr.py  hdrdiff.py  images.py  layout.py  numberwidget.py  pyproject.toml  qt.py  run.sh  test.py  transform.py
test-images/1920/: alpha.exr
test-images/256/: alpha.exr  rgb.exr  rgba.exr
