[project]
name = "hdrdiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python-headless>=4.11.0.86",
    "openexr>=3.3.3",
    "pyqt5>=5.15.11",
    "qtpy>=2.4.3",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
]
